tests/test_files_pa3/external/errors/WrongLibraryName.ic
class WrongLibraryName{
	
	
	
	static void main(string[] args){
	   int a;
       int b;
		a = 3;
		b = a*3;
		
		Librar.printi(b);
	}
	
}